config/samples/nodeport-example/svcs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foxfox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foxfox
  template:
    metadata:
      labels:
        app: foxfox
    spec:
      containers:
      - name: foxfox
        image: nginx:latest
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: foxfox
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: foxfox

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tea
  template:
    metadata:
      labels:
        app: tea
    spec:
      containers:
      - name: tea
        image: nginx:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tea
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: tea
