config/samples/nodeport-example/hrs-filters.yaml

---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: test-filter-headers
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  hostnames:
  - "cafe.example.com"
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: /header-test
      - headers:
        - name: test
          value: zongzw
        - name: dev
          value: andrew
    filters:
      - type: RequestHeaderModifier
        requestHeaderModifier:
          set:
            - name: setheader1
              value: setvalue1
          add:
            - name: addheader1
              value: addvalue1
          remove:
            - removeheader1
    backendRefs:
    - name: tea
      port: 80


---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: test-filter-requestredirect
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  hostnames:
  - "cafe.example.com"
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: /request-test
      - headers:
        - name: test
          value: zongzw
        - name: dev
          value: andrew
    filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
          hostname: www.example.com
          # path: 
          #   type: ReplaceFullPath
          #   replaceFullPath: /fake
          port: 443
          statusCode: 302
    backendRefs:
    - name: tea
      port: 80


# ---

# apiVersion: gateway.networking.k8s.io/v1beta1
# kind: HTTPRoute
# metadata:
#   name: test-filter-urlrewrite
# spec:
#   parentRefs:
#   - name: gateway
#     sectionName: http
#   hostnames:
#   - "cafe.example.com"
#   rules:
#   - matches:
#       - path:
#           type: PathPrefix
#           value: /urlrewrite-test
#       - headers:
#         - name: test
#           value: zongzw
#         - name: dev
#           value: andrew
#     filters:
#       - type: URLRewrite
#         urlRewrite:
#           hostname: www.example.com
#           path: 
#             type: ReplaceFullPath
#             replaceFullPath: /fake
#     backendRefs:
#     - name: tea
#       port: 80


---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: test-filter-extensionref
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  hostnames:
  - "cafe.example.com"
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: /extension-ref-test
      - headers:
        - name: test
          value: zongzw
        - name: dev
          value: andrew
    filters:
      - type: ExtensionRef
        extensionRef:
          group: v1
          kind: Service
          name: coffee
